Add specific BuildScoreProvider for diversity to avoid extra encoding… (#503)
* Add specific BuildScoreProvider for diversity to avoid extra encoding and decoding of nodes